<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/addImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_photo"/>

                <Button
                    android:id="@+id/btnAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    style="@style/Widget.Material3.Button.TextButton.Icon"
                    android:text="@string/add_image"
                    android:textSize="20sp"
                    app:icon="@drawable/add_photo"
                    app:iconSize="20dp"
                    app:iconPadding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/My_custom_textField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="20sp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="10dp"
                        style="@style/My_custom_textField">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/productPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/price"
                            android:inputType="number"
                            android:textSize="20sp"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <Spinner
                        android:id="@+id/productSize"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/My_custom_textField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/productDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:textSize="20sp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnSubmit"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:paddingVertical="7dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnShowData"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:paddingVertical="10dp"
                    android:textAllCaps="false"
                    style="@style/Widget.MaterialComponents.Button"
                    android:text="@string/show"
                    android:textSize="22sp"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>